# TBDR-Software-Rasteriser

./: .gitignore  CMakeLists.txt  README.rst  api.cpp  api.h  bake.cpp  bake.h  draw_scene.cpp  draw_scene.h  load_gltf.cpp  load_gltf.h  log.h  math.h  raster.cpp  raster.h  rasterIMR.cpp  rasterTBDR.cpp  render.cpp  render.h  tiler.cpp  tiler.h  windows.cpp
gameboy/: License.txt  gameboy.blend
model/: test.blend  test.glb
